syncing to repository

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -3,5 +3,6 @@
 <head></head>
 <title></title>
 <body>
-<h1>the name of my business</h1>
+<h1>The perks of eating local fresh honey.</h1>
+    <p>It is a grea t way to help local farmers.</p>
 </body>
