--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,7 +2,8 @@
 <!doctype html>
 <html></html>
 <head></head>
-<title></title>
+<title> Honey Bees</title>
+<link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
 <h1>The perks of eating local fresh honey.</h1>
     <p>It is a grea t way to help local farmers.</p>
