--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,8 +2,8 @@
 <html></html>
 <head></head>
 <title> Honey Bees</title>
-<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <h1>The perks of eating local fresh honey.</h1>
-    <p>It is a grea t way to help local farmers.</p>
+    <p>It is a great way to help local farmers.</p>
 </body>
